# terra-keeper

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
spiders/: admin.py  apps.py  custom_validators.py  forms.py  models.py  old_views.py  signals.py  urls.py  views.py
spiders/migrations/: 0001_initial.py  0002_alter_spider_id.py  0003_animalslist_spider_list.py  0004_alter_animalslist_owner.py  0005_alter_spider_added.py  0006_rename_added_spider_joined.py  0007_remove_spider_list_spider_owner_delete_animalslist.py  0008_alter_spider_owner.py  0009_spider_sex.py  0010_alter_spider_sex.py  0011_remove_spider_molt_molt.py  0012_alter_molt_options_spider_current_molt.py  0013_alter_molt_options_spider_notes.py  0014_alter_spider_sex.py  0015_alter_molt_options.py  0016_spider_photo.py  0017_alter_spider_photo.py
spiders/templates/spiders/: delete_photo.html  details.html  index.html  molt-form.html  molt_form.html  molt_list.html  spider-form.html  spider-molts.html  spider_detail.html  spider_form.html  spider_list.html
static/styles/: main.css
templates/: 404.html  add-molt-modal.html  delete.html  footer.html  main.html  navbar.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  reset_password.html
terrakeeper/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_name_profile_username.py  0003_alter_profile_username.py
users/templates/users/: change_password.html  details.html  (+6 more)
