[tool.poetry]
name = "terra-keeper"
version = "0.1.0"
description = ""
authors = ["morveusz93 <morveusz93@gmail.com>"]
readme = "README.md"
packages = [{include = "terra_keeper"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "4.0.1"
pillow = "^9.4.0"
django-bootstrap-form = "^3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
